tests/ui/resolve/issue-33876.stderr
error[E0423]: cannot find value `Bar` in this scope
  --> $DIR/issue-33876.rs:10:26
   |
LL |     let any: &dyn Any = &Bar;
   |                          ^^^ not found in this scope
   |
   = note: a trait named `Bar` exists in another namespace

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0423`.
